publish snow queen

--- a/site/public/404.html
+++ b/site/public/404.html
@@ -14,7 +14,7 @@
 
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="this is my description"/>
+<meta name="twitter:description" content="coding ..."/>
 
 
 
@@ -30,7 +30,7 @@
        404 Page not found &middot;  Code Gym
     </title>
 
-    <meta name="description" content="this is my description" />
+    <meta name="description" content="coding ..." />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -108,7 +108,7 @@
             
 
             <h1 class="page-title">Code Gym</h1>
-            <h2 class="page-description">this is my description</h2>
+            <h2 class="page-description">coding ...</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Scroll Down</span></a>
